Fixed some SonarQube and JUnit warnings